--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Avi Trivedi</title>
+		<title>Avi Trivedi - Hire Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I'm Avi</strong>, a programmer and a thinker<br />
 					aspiring to become an impactful<br />
-					conveyor of data</h1>
+					conveyor of data.</h1>
 				</div>
 			</header>
 
